data/derived/comb/progs/unify/prog4719.ml.out
Characters 19-26:
  let _ = fixpoint (collatz, 1) ;;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int -> int * bool
       Type int is not compatible with type int -> int * bool 
